Lavoro in corso

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,6 @@
-h1 {
-    color: skyblue;
-}
-
-h2 {
-    color: white;
-}
+@import "partials/mixins";
+@import "partials/general";
+@import "partials/header";
+@import "partials/variables";
+@import "partials/main";
+@import "partials/footer";
