--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -11,14 +11,16 @@
     border-bottom: 1px solid black;
 }
 
-.nav_space ul li {
-    list-style-type: none;
-    display: inline-block;
-    padding-left: 5px;
-}
-
-.nav_space button {
-    padding: 8px;
+.nav_space {
+    ul li {
+        list-style-type: none;
+        display: inline-block;
+        padding-left: 5px;
+        cursor: pointer;
+    }
+    button {
+        padding: 8px;
+    }
 }
 
 
@@ -29,8 +31,40 @@
 
 .head_inf {
     width: 100%;
-    height: 50vh;
-    background-image: url('../../img/illustration-main.jpg');
+    height: fit-content;
+    margin-top: 50px;
+    line-height: 50px;
+}
+
+.headinf_text {
+    width: 50%;
+    margin-right: 40px;
+    h1 {
+        font-size: 2.7em;
+        font-weight: 600;
+    }
+    .main_paragraph {
+        font-size: 1.2em;
+        font-weight: 500;
+        margin-bottom: 15px;
+    }
+    button {
+        background-color: $buttons_color;
+        color: white;
+        padding: 5px;
+    }
+    img {
+        width: 16px;
+        vertical-align: text-bottom;
+        margin-right: 3px;
+    }
+}
+
+.headinf_image {
+    width: 50%;
+    img {
+        width: 100%;
+    }
 }
 
 
