--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -49,9 +49,7 @@
         margin-bottom: 15px;
     }
     button {
-        background-color: $buttons_color;
-        color: white;
-        padding: 5px;
+        @include my-button;
     }
     img {
         width: 16px;
