Lavori in corso

--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -2,5 +2,6 @@ $buttons_color: #2c4792;
 $texts_color: #614a38;
 $my_font_family: 'Roboto',
 sans-serif;
+$my_font_weight: 500;
 $button_hover_background: #1f3470;
 $pink_body_background: #ffe7d2;
