--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -1,25 +1,38 @@
-/* Inizio prima sezione del main */
+/* Inizio prima sezione generale del main */
 
-.second {
+.my_main {
     background-color: $pink_body_background;
     margin-top: 15px;
-    height: 50vh;
+    height: fit-content;
 }
 
 #first_pink_section,
 #second_pink_section {
     text-align: center;
-    padding-top: 50px;
+    padding-top: 70px;
     padding-bottom: 50px;
     h2 {
-        margin-bottom: 45px;
+        margin-bottom: 50px;
     }
+}
+
+#first_pink_section {
+    border-bottom: 1px solid black;
+}
+
+.allblocks_container {
+    margin-bottom: 100px;
 }
 
 .block {
     width: calc(100%/3);
+    align-self: center;
     img {
         width: 35%;
+        object-fit: cover;
+    }
+    .first_img {
+        width: 41.8%;
     }
     .notsafe_img {
         object-fit: cover;
@@ -27,7 +40,70 @@
         margin-top: 5px;
         height: 85%;
     }
+    .first_second_img {
+        width: 40%;
+        margin-top: 11px;
+    }
+    .safe_img {
+        width: 13%;
+    }
+    p {
+        margin-top: 20px;
+    }
+}
+
+.singolar {
+    width: 30%;
+}
+
+#second_pink_section h2:last-child {
+    margin-bottom: 0;
+    margin-top: 100px;
 }
 
 
-/* Fine prima sezione del main */
+/* Fine prima sezione generale del main */
+
+
+/* Inizio seconda sezione generale del corpo della pagina */
+
+.container {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.second_block {
+    color: $texts_color;
+    width: 100%;
+    margin-bottom: 50px;
+    .principal_img {
+        width: 50%;
+        height: 47%;
+    }
+    .text_container {
+        width: 24%;
+        line-height: 30px;
+        flex-direction: column;
+        h2 {
+            font-size: 1.6em;
+            margin-bottom: 50px;
+        }
+        p {
+            font-size: 1.2em;
+            margin-bottom: 20px;
+        }
+        a {
+            font-size: 1.2em;
+            text-decoration: none;
+            color: $buttons_color;
+            margin-bottom: 20px;
+        }
+        p,
+        a {
+            font-weight: $my_font_weight;
+        }
+        img {
+            width: 100%;
+        }
+    }
+}
