--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,7 +1,9 @@
 $buttons_color: #2c4792;
-$texts_color: #614a38;
+$texts_color: #7f14d4;
 $my_font_family: 'Roboto',
 sans-serif;
 $my_font_weight: 500;
 $button_hover_background: #1f3470;
-$pink_body_background: #ffe7d2;
+$pink_body_background: #0414b3;
+$big_line_height: 60px;
+$violet_palette_color: #7f14d4;
