--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -11,15 +11,32 @@
     border-bottom: 1px solid black;
 }
 
+.logos img {
+    width: 110px;
+    object-fit: cover;
+}
+
 .nav_space {
     ul li {
         list-style-type: none;
         display: inline-block;
-        padding-left: 5px;
+        padding-left: 20px;
         cursor: pointer;
+        font-weight: bold;
+        font-size: 0.9em;
     }
     button {
         padding: 8px;
+        background-color: white;
+        outline: none;
+        border: 1px solid grey;
+        border-radius: 5px;
+        margin-left: 20px;
+        img {
+            width: 18px;
+            vertical-align: text-bottom;
+            margin-right: 5px;
+        }
     }
 }
 
@@ -33,7 +50,7 @@
     width: 100%;
     height: fit-content;
     margin-top: 50px;
-    line-height: 50px;
+    line-height: $big_line_height;
 }
 
 .headinf_text {
@@ -52,9 +69,7 @@
         @include my-button;
     }
     img {
-        width: 16px;
-        vertical-align: text-bottom;
-        margin-right: 3px;
+        @include button-images;
     }
 }
 
