--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -31,10 +31,10 @@
     img {
         width: 35%;
         object-fit: cover;
-        background-color: rgba(0, 0, 0, 0.705);
+        background-color: rgba(255, 255, 255, 0.623);
         border-radius: 30px;
         padding: 5px;
-        border: 1px solid white;
+        border: 2px solid skyblue;
     }
     .first_img {
         width: 41.8%;
@@ -47,6 +47,7 @@
     }
     .first_second_img {
         width: 40%;
+        height: 104px;
         margin-top: 11px;
     }
     .safe_img {
@@ -56,6 +57,7 @@
         margin-top: 6px;
     }
     p {
+        font-size: 1.1em;
         margin-top: 20px;
     }
 }
